<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    tools:context="com.momenta_app.TaskActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/task_top_layout"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_below="@+id/toolbar"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/task_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:theme="@style/checkboxBlueBackground"
            android:visibility="gone"
            tools:visibility="visible"/>

        <EditText
            android:id="@+id/task_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_activity_hint"
            android:textColorHint="@color/hint_text"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:maxLength="64"
            android:background="@null"
            android:theme="@style/SecondaryEditTextTheme"
            android:inputType="textCapSentences"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/task_top_layout"
        android:visibility="gone"
        tools:visibility="visible">

        <com.akexorcist.roundcornerprogressbar.TextRoundCornerProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            autofit:rcRadius="20dp"
            autofit:rcReverse="false"
            autofit:rcBackgroundPadding="3dp"
            autofit:rcProgressColor="@color/colorAccent"
            autofit:rcBackgroundColor="@color/total_time_goal"
            android:layout_margin="15dp"/>

        <LinearLayout
            android:id="@+id/progress_detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressBar"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/task_time_spent_circle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="15sp"
                android:text="@string/timespent_string2"/>
            <TextView
                android:id="@+id/progress_text_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
            <View
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/total_goal_circle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginEnd="5dp"
                android:text="@string/goal_string2"/>
            <TextView
                android:id="@+id/max_text_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/progress_layout">

        <RelativeLayout
            android:id="@+id/scrollable_relative_laytout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/task_goal_layout"
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:onClick="goalOnClick"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/task_goal_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:paddingTop="8dp"
                    android:tint="#9B9B9B"
                    android:contentDescription="@string/goal_icon_content_description"
                    android:src="@drawable/bullseye"/>
                <TextView
                    android:id="@+id/task_goal_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_string"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/task_goal_image"/>
                <TextView
                    android:id="@+id/task_goal_value"
                    android:layout_width="match_parent"
                    tools:text="@string/goal_string"
                    android:layout_marginStart="5dp"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/task_goal_image"
                    android:layout_below="@+id/task_goal_title" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/task_deadline_layout"
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_below="@id/task_goal_layout"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:onClick="deadlineOnClick"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/task_deadline_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:paddingTop="8dp"
                    android:tint="#9B9B9B"
                    android:contentDescription="@string/deadline_icon_content_description"
                    android:src="@drawable/timetable"/>
                <TextView
                    android:id="@+id/task_deadline_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/deadline_string"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/task_deadline_image"/>
                <TextView
                    android:id="@+id/task_deadline_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_below="@+id/task_deadline_title"
                    android:layout_toEndOf="@+id/task_deadline_image"
                    tools:text="@string/sample_deadline_string"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/task_priority_layout"
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_below="@id/task_deadline_layout"
                android:paddingStart="14dp"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:background="?attr/selectableItemBackground"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/task_priority_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="1dp"
                    android:paddingTop="8dp"
                    android:tint="#9B9B9B"
                    android:contentDescription="@string/priority_icon_content_description"
                    android:src="@drawable/format_list_numbers"/>

                <TextView
                    android:id="@+id/task_priority_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/priority_string"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/task_priority_image"/>

                <Spinner
                    android:id="@+id/task_priority_spinner"
                    android:layout_below="@+id/task_priority_title"
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/task_priority_image"
                    android:layout_height="25dp"
                    android:entries="@array/Priorities"
                    android:prompt="@string/priority_spinner_title"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/task_timespent_layout"
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:onClick="timeSpentOnClick"
                android:background="?attr/selectableItemBackground"
                android:layout_below="@id/task_priority_layout"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/task_timespent_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:tint="#9B9B9B"
                    android:contentDescription="@string/goal_icon_content_description"
                    android:src="@drawable/timer_sand"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timespent_string"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    android:layout_toEndOf="@+id/task_timespent_image"/>

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>