<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_done"
        android:title="@string/dialog_done"
        android:icon="@drawable/ic_action_done"
        android:orderInCategory="2"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
...
